--- a/cloudjourney_slides.html
+++ b/cloudjourney_slides.html
@@ -240,8 +240,8 @@ use-specific databases nosql, docment databases, key/value stores.
 </section>
 </section>
 <section>
-<section id="slide-orgheadline13" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline13">it's all so different but&#x2026;</h2>
+<section id="slide-orgheadline14" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline14">it's all so different but&#x2026;</h2>
 <div style="font-size:xx-large;">
 
 <ul>
@@ -271,18 +271,32 @@ corollary 6a
 </div>
 
 </section>
+<section id="slide-orgheadline13" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline13">Don't fear the cloud</h3>
+<p align="left">
+The technology world is not leaving you behind.  There is a very high rate of
+change and some of these "new" technologies may or may not become relevant to
+your career and your business. 
+</p>
+
+<p align="left">
+So you should be running towards what I'm describing as Cloud IT technologies
+and methods and getting familiar with them now. 
+</p>
+
+</section>
 </section>
 <section>
-<section id="slide-orgheadline20" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline20">practical steps for the IT practitioner</h2>
+<section id="slide-orgheadline21" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline21">practical steps for the IT practitioner</h2>
 <p>
 What should the IT practitioner start doing to prepare for a transition to Cloud
 IT? 
 </p>
 
 </section>
-<section id="slide-orgheadline14" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline14">Get a Cloud Account</h3>
+<section id="slide-orgheadline15" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline15">Get a Cloud Account</h3>
 <p align="left">
 Get an AWS, Azure, or GCP account. They all have very low cost and/or free tiers
 of usage. Start with the basic infrastructure elements.
@@ -304,16 +318,16 @@ fashion.  depends on use case and needs
 </aside>
 
 </section>
-<section id="slide-orgheadline15" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline15">Learn Linux</h3>
+<section id="slide-orgheadline16" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline16">Learn Linux</h3>
 <p align="left">
 Cloud native and Linux go hand in hand.  it's time now to start focusing your
 attention on Linux skills.  
 </p>
 
 </section>
-<section id="slide-orgheadline16" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline16">Learn git.</h3>
+<section id="slide-orgheadline17" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline17">Learn git.</h3>
 <p align="left">
 essential skills today for the practitioner.  Learn how git workflows and how to
 collaborate with others. Understant the value of cheap branching and
@@ -325,8 +339,8 @@ There are numerous web based resources.  Reach out to me and I'll point you to s
 </p>
 
 </section>
-<section id="slide-orgheadline17" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline17">Learn automation tools</h3>
+<section id="slide-orgheadline18" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline18">Learn automation tools</h3>
 <ul>
 <li>Chef</li>
 <li>Puppet</li>
@@ -337,9 +351,20 @@ There are numerous web based resources.  Reach out to me and I'll point you to s
 
 </ul>
 
+<aside class="notes">
+<p>
+These are all examples of declarative syntax based systems. This is a bit
+different than the imperative approach of typical scripting.  the later is
+valuable and can get you some time back but it's super specific.  it's the
+difference between making a sandwatch and ordering one be made at the drive
+through (API call).  this is a fundamental concept in cloud IT
+</p>
+
+</aside>
+
 </section>
-<section id="slide-orgheadline18" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline18">Learn automation tools</h3>
+<section id="slide-orgheadline19" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline19">Learn automation tools</h3>
 
 <div class="figure">
 <p><img src="https://imgs.xkcd.com/comics/the_general_problem.png" alt="the_general_problem.png" /> 
@@ -353,8 +378,8 @@ long game
 
 
 </section>
-<section id="slide-orgheadline19" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline19">Get out of your comfort zone</h3>
+<section id="slide-orgheadline20" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline20">Get out of your comfort zone</h3>
 <p align="left">
 If you feel out of depth and this is hard, you're (probably) doing it right.
 Make the time investment
@@ -363,15 +388,15 @@ Make the time investment
 </section>
 </section>
 <section>
-<section id="slide-orgheadline25" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline25">What should an IT leader do?</h2>
+<section id="slide-orgheadline26" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline26">What should an IT leader do?</h2>
 <p>
 What steps can an IT leader take to prepare for Cloud IT
 </p>
 
 </section>
-<section id="slide-orgheadline21" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline21">Talk to the business</h3>
+<section id="slide-orgheadline22" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline22">Talk to the business</h3>
 <p align="left">
 Get IT and business leaderstalking. Understand what they want out if it and how they
 use it. If they use cloud find out what for and why. 
@@ -383,24 +408,24 @@ around IT, that's an important signal.
 </p>
 
 </section>
-<section id="slide-orgheadline22" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline22">Find peers</h3>
+<section id="slide-orgheadline23" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline23">Find peers</h3>
 <p align="left">
 Get out into the community. Find peer customers. Find trusted advisors(like asg)
 to extend staff and introduce new modes of operating
 </p>
 
 </section>
-<section id="slide-orgheadline24" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline24">Find trusted advisors</h3>
-<p>
+<section id="slide-orgheadline25" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline25">Find trusted advisors</h3>
+<p align="left">
 Talk to your technology partners. Ask them probing questions. What are they
 asking you?  How can they help you make start this journey
 </p>
 
 </section>
-<section id="slide-orgheadline23" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h4 id="orgheadline23">Themes to listen for:</h4>
+<section id="slide-orgheadline24" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h4 id="orgheadline24">Themes to listen for:</h4>
 <ul>
 <li>faster</li>
 <li>automated</li>
@@ -414,8 +439,8 @@ asking you?  How can they help you make start this journey
 </section>
 </section>
 <section>
-<section id="slide-orgheadline26" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline26">ASG can help</h2>
+<section id="slide-orgheadline27" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline27">ASG can help</h2>
 <p>
 App map to start journey. Even for o365 migrationn. (Backup matters security matters. Ms
 doesn't necessarily meet all your corporate objectives)
