--- a/cloudjourney_slides.html
+++ b/cloudjourney_slides.html
@@ -346,8 +346,6 @@ There are numerous web based resources.  Reach out to me and I'll point you to s
 <li>Puppet</li>
 <li>Ansible</li>
 <li>Salt</li>
-<li>Powershell</li>
-<li>Python</li>
 
 </ul>
 
@@ -358,6 +356,7 @@ different than the imperative approach of typical scripting.  the later is
 valuable and can get you some time back but it's super specific.  it's the
 difference between making a sandwatch and ordering one be made at the drive
 through (API call).  this is a fundamental concept in cloud IT
+verbally mention powershell and python
 </p>
 
 </aside>
@@ -439,15 +438,42 @@ asking you?  How can they help you make start this journey
 </section>
 </section>
 <section>
-<section id="slide-orgheadline27" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline27">ASG can help</h2>
-<p>
-App map to start journey. Even for o365 migrationn. (Backup matters security matters. Ms
-doesn't necessarily meet all your corporate objectives)
+<section id="slide-orgheadline30" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline30">ASG can help</h2>
+<p align="left">
+With our Application Mapping Service and Cloud Roadmap Service
 </p>
 
+</section>
+<section id="slide-orgheadline27" data-background="./ASG-AppMap-slide1.png" data-background-size="80%" data-background-transition="slide">
+<h3 id="orgheadline27"></h3>
+
+</section>
+<section id="slide-orgheadline28" data-background="./ASG-AppMap-slide2.png" data-background-size="80%" data-background-transition="slide">
+<h3 id="orgheadline28"></h3>
+
+</section>
+<section id="slide-orgheadline29" data-background="./ASG-AppMap-slide3.png" data-background-size="80%" data-background-transition="slide">
+<h3 id="orgheadline29"></h3>
+
+</section>
+</section>
+<section>
+<section id="slide-orgheadline31" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline31">Tintri slides</h2>
 <p>
-put app map slides here
+tintri offering lines up with these principles and has "cloud readiness" slides
+within their set. pull out and highlight those slides and how key value meshes
+with message
+</p>
+
+</section>
+</section>
+<section>
+<section id="slide-orgheadline32" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline32">Thank you</h2>
+<p>
+Questions?
 </p>
 </section>
 </section>
