--- a/cloudjourney_slides.html
+++ b/cloudjourney_slides.html
@@ -459,19 +459,53 @@ With our Application Mapping Service and Cloud Roadmap Service
 </section>
 </section>
 <section>
-<section id="slide-orgheadline31" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline31">Tintri slides</h2>
+<section id="slide-orgheadline38" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline38">ASG and Tintri</h2>
 <p>
-tintri offering lines up with these principles and has "cloud readiness" slides
-within their set. pull out and highlight those slides and how key value meshes
-with message
+ASG partners with Tintri. Tintri's VM-aware storage is an example of a product
+that provides many of the attributes to ready enterprise customers to being
+moving to cloud-like IT.  
 </p>
+
+<p>
+How?
+</p>
+
+</section>
+<section id="slide-orgheadline31" data-background="./tintri_slide1.png" data-background-transition="slide">
+<h3 id="orgheadline31"></h3>
+
+</section>
+<section id="slide-orgheadline32" data-background="./tintri_slide2.png" data-background-transition="slide">
+<h3 id="orgheadline32"></h3>
+
+</section>
+<section id="slide-orgheadline33" data-background="./tintri_slide3.png" data-background-transition="slide">
+<h3 id="orgheadline33"></h3>
+
+</section>
+<section id="slide-orgheadline34" data-background="./tintri_slide4.png" data-background-transition="slide">
+<h3 id="orgheadline34"></h3>
+
+</section>
+<section id="slide-orgheadline35" data-background="./tintri_slide5.png" data-background-transition="slide">
+<h3 id="orgheadline35"></h3>
+
+</section>
+<section id="slide-orgheadline36" data-background="./tintri_slide6.png" data-background-transition="slide">
+<h3 id="orgheadline36"></h3>
+
+
+</section>
+<section id="slide-orgheadline37" data-background="./tintri_slide7.png" data-background-transition="slide">
+<h3 id="orgheadline37"></h3>
+
 
 </section>
 </section>
 <section>
-<section id="slide-orgheadline32" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline32">Thank you</h2>
+<section id="slide-orgheadline39" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline39">Thank you</h2>
 <p>
 Questions?
 </p>
