visual improvements on imported ASG slides
used gimp to improve visual layout of slides exported from
ASG ppt as images.

--- a/cloudjourney_slides.html
+++ b/cloudjourney_slides.html
@@ -387,8 +387,8 @@ Make the time investment
 </section>
 </section>
 <section>
-<section id="slide-orgheadline26" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline26">What should an IT leader do?</h2>
+<section id="slide-orgheadline27" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline27">What should an IT leader do?</h2>
 <p>
 What steps can an IT leader take to prepare for Cloud IT
 </p>
@@ -408,23 +408,52 @@ around IT, that's an important signal.
 
 </section>
 <section id="slide-orgheadline23" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline23">Find peers</h3>
+<h3 id="orgheadline23">Foster Innovation</h3>
+<ul>
+<li class="fragment appear">Give your IT team room to learn and change</li>
+<li class="fragment appear">Encourage education</li>
+<li class="fragment appear">Recognize that processes may have to change</li>
+<li class="fragment appear">And incentives</li>
+<li class="fragment appear">Make better risk calculations</li>
+
+</ul>
+
+<aside class="notes">
+<p>
+people need space to work. Send them to educational events that aren't the same.
+Get them to report back to the team what they learned.  
+</p>
+
+<p>
+This is cultural change.  you can quash it or you can give it room to grow.  
+</p>
+
+<p>
+incentives may need realignment and you need to better understand what risks are
+worth taking.  Are you rewarding the status quo and minimal change via your policies?
+</p>
+
+</aside>
+
+</section>
+<section id="slide-orgheadline24" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline24">Find peers</h3>
 <p align="left">
 Get out into the community. Find peer customers. Find trusted advisors(like asg)
 to extend staff and introduce new modes of operating
 </p>
 
 </section>
-<section id="slide-orgheadline25" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline25">Find trusted advisors</h3>
+<section id="slide-orgheadline26" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline26">Find trusted advisors</h3>
 <p align="left">
 Talk to your technology partners. Ask them probing questions. What are they
 asking you?  How can they help you make start this journey
 </p>
 
 </section>
-<section id="slide-orgheadline24" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h4 id="orgheadline24">Themes to listen for:</h4>
+<section id="slide-orgheadline25" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h4 id="orgheadline25">Themes to listen for:</h4>
 <ul>
 <li>faster</li>
 <li>automated</li>
@@ -438,29 +467,44 @@ asking you?  How can they help you make start this journey
 </section>
 </section>
 <section>
-<section id="slide-orgheadline30" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline30">ASG can help</h2>
+<section id="slide-orgheadline31" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline31">ASG can help</h2>
 <p align="left">
 With our Application Mapping Service and Cloud Roadmap Service
 </p>
 
 </section>
-<section id="slide-orgheadline27" data-background="./ASG-AppMap-slide1.png" data-background-size="80%" data-background-transition="slide">
-<h3 id="orgheadline27"></h3>
-
-</section>
-<section id="slide-orgheadline28" data-background="./ASG-AppMap-slide2.png" data-background-size="80%" data-background-transition="slide">
+<section id="slide-orgheadline28" data-background="./asg_slide_bg.png" data-background-transition="slide">
 <h3 id="orgheadline28"></h3>
 
+<div class="figure">
+<p><img src="./ASG-AppMap-slide1.png" alt="ASG-AppMap-slide1.png" />
+</p>
+</div>
+
 </section>
-<section id="slide-orgheadline29" data-background="./ASG-AppMap-slide3.png" data-background-size="80%" data-background-transition="slide">
+<section id="slide-orgheadline29" data-background="./asg_slide_bg.png" data-background-transition="slide">
 <h3 id="orgheadline29"></h3>
+
+<div class="figure">
+<p><img src="./ASG-AppMap-slide2.png" alt="ASG-AppMap-slide2.png" />
+</p>
+</div>
+
+</section>
+<section id="slide-orgheadline30" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline30"></h3>
+
+<div class="figure">
+<p><img src="./ASG-AppMap-slide3.png" alt="ASG-AppMap-slide3.png" />
+</p>
+</div>
 
 </section>
 </section>
 <section>
-<section id="slide-orgheadline38" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline38">ASG and Tintri</h2>
+<section id="slide-orgheadline39" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline39">ASG and Tintri</h2>
 <p>
 ASG partners with Tintri. Tintri's VM-aware storage is an example of a product
 that provides many of the attributes to ready enterprise customers to being
@@ -472,40 +516,40 @@ How?
 </p>
 
 </section>
-<section id="slide-orgheadline31" data-background="./tintri_slide1.png" data-background-transition="slide">
-<h3 id="orgheadline31"></h3>
-
-</section>
-<section id="slide-orgheadline32" data-background="./tintri_slide2.png" data-background-transition="slide">
+<section id="slide-orgheadline32" data-background="./tintri_slide1.png" data-background-transition="slide">
 <h3 id="orgheadline32"></h3>
 
 </section>
-<section id="slide-orgheadline33" data-background="./tintri_slide3.png" data-background-transition="slide">
+<section id="slide-orgheadline33" data-background="./tintri_slide2.png" data-background-transition="slide">
 <h3 id="orgheadline33"></h3>
 
 </section>
-<section id="slide-orgheadline34" data-background="./tintri_slide4.png" data-background-transition="slide">
+<section id="slide-orgheadline34" data-background="./tintri_slide3.png" data-background-transition="slide">
 <h3 id="orgheadline34"></h3>
 
 </section>
-<section id="slide-orgheadline35" data-background="./tintri_slide5.png" data-background-transition="slide">
+<section id="slide-orgheadline35" data-background="./tintri_slide4.png" data-background-transition="slide">
 <h3 id="orgheadline35"></h3>
 
 </section>
-<section id="slide-orgheadline36" data-background="./tintri_slide6.png" data-background-transition="slide">
+<section id="slide-orgheadline36" data-background="./tintri_slide5.png" data-background-transition="slide">
 <h3 id="orgheadline36"></h3>
+
+</section>
+<section id="slide-orgheadline37" data-background="./tintri_slide6.png" data-background-transition="slide">
+<h3 id="orgheadline37"></h3>
 
 
 </section>
-<section id="slide-orgheadline37" data-background="./tintri_slide7.png" data-background-transition="slide">
-<h3 id="orgheadline37"></h3>
+<section id="slide-orgheadline38" data-background="./tintri_slide7.png" data-background-transition="slide">
+<h3 id="orgheadline38"></h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgheadline39" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline39">Thank you</h2>
+<section id="slide-orgheadline40" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline40">Thank you</h2>
 <p>
 Questions?
 </p>
