--- a/cloudjourney_slides.html
+++ b/cloudjourney_slides.html
@@ -29,7 +29,7 @@
 
 <section>
 <section id="slide-orgheadline1" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline1">Starting your IT organization's journey to Cloud IT</h2>
+<h2 id="orgheadline1">Starting Your IT Organization's journey to Cloud IT</h2>
 <p>
 Scott Harney &lt;sharney@virtual.com&gt;
 </p>
@@ -38,6 +38,17 @@ Scott Harney &lt;sharney@virtual.com&gt;
 10/25/2016
 </p>
 
+
+<div style="font-size:large; text-align:left;">
+<p>
+Twitter: <a href="https://twitter.com/sharney">@sharney</a>
+</p>
+
+<p>
+Linkedin: <a href="https://www.linkedin.com/in/scottharney">https://www.linkedin.com/in/scottharney</a>
+</p>
+</div>
+
 </section>
 </section>
 <section>
@@ -45,13 +56,9 @@ Scott Harney &lt;sharney@virtual.com&gt;
 <h2 id="orgheadline5">Intro</h2>
 <aside class="notes">
 <p>
-Also opening questions. Who is using public cloud today? Who has ms azure
-credits? Are you using them? Who has an initiative to move to a public private
-or hybrid cloud model? Open stack anyone?
-</p>
-
-<p>
-Do I do a bio slide here? and a who is ASG slide?
+Opening questions. practictioners and leaders ? Who is using public cloud today?
+Who has ms azure credits? Are you using them? Who has an initiative to move to a
+public private or hybrid cloud model? Open stack anyone?
 </p>
 
 </aside>
@@ -71,27 +78,27 @@ Do I do a bio slide here? and a who is ASG slide?
 <ul>
 <li class="fragment appear">Consulting Engineer for ASG
 <ul>
-<li>provide pre-sales support</li>
-<li>also post-sales delivery PS and consulting</li>
+<li>Provide pre-sales support</li>
+<li>Also post-sales delivery PS and consulting</li>
 
 </ul></li>
-<li class="fragment appear">previous practitioner experience in customer roles
+<li class="fragment appear">Previous practitioner experience in customer roles
 <ul>
-<li>network engineer</li>
-<li>unix/linux engineer</li>
-<li>storage and backup</li>
+<li>Storage and backup</li>
+<li>Unix/linux engineer</li>
+<li>Network engineer</li>
 
 </ul></li>
-<li class="fragment appear">live and work exclusively in LA</li>
+<li class="fragment appear">Live and work exclusively in LA</li>
 
 </ul>
 
 </section>
 <section id="slide-orgheadline4" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline4">Who Is ASG?</h3>
+<h3 id="orgheadline4">Who is ASG?</h3>
 <ul>
 <li>Leading National systems integrator since 1981</li>
-<li>headquarters in Denver, CO. has maintained a prescence in LA throughout
+<li>Headquarters in Denver, CO. has maintained a prescence in LA throughout
 company history</li>
 <li>Provides Consulting services supporting the business of IT</li>
 
@@ -109,7 +116,7 @@ company history</li>
 </section>
 <section>
 <section id="slide-orgheadline6" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline6">how ASG views IT</h2>
+<h2 id="orgheadline6">How ASG Views IT</h2>
 
 <div class="figure">
 <p><img src="./5points.png" alt="5points.png" align="left" width="40%" height="40%" />
@@ -137,9 +144,9 @@ What ways do IT functions support the business
 <section id="slide-orgheadline7" data-background="./asg_slide_bg.png" data-background-transition="slide">
 <h3 id="orgheadline7">3 ways</h3>
 <ul>
-<li class="fragment appear">help make $</li>
-<li class="fragment appear">save $</li>
-<li class="fragment appear">prevent loss of $</li>
+<li class="fragment appear">Help make $</li>
+<li class="fragment appear">Save $</li>
+<li class="fragment appear">Prevent loss of $</li>
 
 </ul>
 
@@ -152,13 +159,13 @@ IT is focused on safety and saving money on scarce IT resources
 </section>
 <section>
 <section id="slide-orgheadline9" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline9">cloud IT is about going faster</h2>
+<h2 id="orgheadline9">Cloud IT is About Going Faster</h2>
 <ul>
-<li class="fragment appear">faster is a competitive advantage for many business</li>
-<li class="fragment appear">ability to pivot</li>
-<li class="fragment appear">flexibility to experiment</li>
+<li class="fragment appear">Faster is a competitive advantage for many business</li>
+<li class="fragment appear">Ability to pivot</li>
+<li class="fragment appear">Flexibility to experiment</li>
 <li class="fragment appear">BUs can buy what they need and use immediately</li>
-<li class="fragment appear">still can be just as safe if not more so</li>
+<li class="fragment appear">Still can be just as safe if not more so</li>
 
 </ul>
 
@@ -166,7 +173,7 @@ IT is focused on safety and saving money on scarce IT resources
 </section>
 <section>
 <section id="slide-orgheadline10" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline10">cloud is not a technology</h2>
+<h2 id="orgheadline10">Cloud is <i>Not</i> a technology</h2>
 <p align="left">
 Well, not entirely anyway. It's also very much about people and process. It is a
 different consumption model for IT resources. It is much more aligned with
@@ -186,12 +193,12 @@ understanding of their function, use or role within the business.
 </section>
 <section>
 <section id="slide-orgheadline11" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline11">cloud economics are different</h2>
+<h2 id="orgheadline11">Cloud Economics are Different</h2>
 <ul>
-<li class="fragment appear">rent vs buy for public</li>
-<li class="fragment appear">abundant resources vs limited</li>
-<li class="fragment appear">does not reward traditional it app architectures</li>
-<li class="fragment appear">can be hard/pricey to move data out of cloud or across vendors</li>
+<li class="fragment appear">Rent vs buy for public</li>
+<li class="fragment appear">Abundant resources vs limited</li>
+<li class="fragment appear">Does not reward traditional it app architectures</li>
+<li class="fragment appear">Can be hard/pricey to move data out of cloud or across vendors</li>
 
 </ul>
 
@@ -212,11 +219,12 @@ glacier because it's cheap or "free"? Answer : maybe&#x2026;
 </section>
 <section>
 <section id="slide-orgheadline12" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline12">cloud app architectures are different</h2>
+<h2 id="orgheadline12">Cloud App Architectures are Different</h2>
 <ul>
-<li class="fragment roll-in">apps are stateless</li>
-<li class="fragment roll-in">databases are "eventually conconsistent"</li>
-<li class="fragment roll-in">there are different database types</li>
+<li class="fragment roll-in">Apps are stateless</li>
+<li class="fragment roll-in">Distributed computing model</li>
+<li class="fragment roll-in">Databases are "eventually consistent"</li>
+<li class="fragment roll-in">There are different database types</li>
 
 </ul>
 
@@ -241,12 +249,12 @@ use-specific databases nosql, docment databases, key/value stores.
 </section>
 <section>
 <section id="slide-orgheadline14" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline14">it's all so different but&#x2026;</h2>
+<h2 id="orgheadline14">It's All So Different, But&#x2026;</h2>
 <div style="font-size:xx-large;">
 
 <ul>
 <li class="fragment appear"><p>
-rule 11
+Rule 11
 </p>
 <pre class="example">
 (11) Every old idea will be proposed again with a different name and
@@ -255,7 +263,7 @@ rule 11
      (11a) (corollary). See rule 6a.Quote rule 11 rfc 1925
 </pre></li>
 <li class="fragment appear"><p>
-corollary 6a
+Corollary 6a
 </p>
 <pre class="example">
 (6a) (corollary). It is always possible to add another level of
@@ -274,7 +282,7 @@ corollary 6a
 <section id="slide-orgheadline13" data-background="./asg_slide_bg.png" data-background-transition="slide">
 <h3 id="orgheadline13">Don't fear the cloud</h3>
 <p align="left">
-The technology world is not leaving you behind.  There is a very high rate of
+The technology world is <b>not</b> leaving you behind.  There is a very high rate of
 change and some of these "new" technologies may or may not become relevant to
 your career and your business. 
 </p>
@@ -284,11 +292,19 @@ So you should be running towards what I'm describing as Cloud IT technologies
 and methods and getting familiar with them now. 
 </p>
 
+<aside class="notes">
+<p>
+This is the main point of the talk. personal experience w/ fear, did IT move
+past while stuck in a "legacy" world.  
+</p>
+
+</aside>
+
 </section>
 </section>
 <section>
 <section id="slide-orgheadline21" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline21">practical steps for the IT practitioner</h2>
+<h2 id="orgheadline21">Practical Steps For the IT Practitioner</h2>
 <p>
 What should the IT practitioner start doing to prepare for a transition to Cloud
 IT? 
@@ -327,10 +343,10 @@ attention on Linux skills.
 
 </section>
 <section id="slide-orgheadline17" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline17">Learn git.</h3>
+<h3 id="orgheadline17">Learn <code>git</code></h3>
 <p align="left">
-essential skills today for the practitioner.  Learn how git workflows and how to
-collaborate with others. Understant the value of cheap branching and
+essential skills today for the practitioner. Learn how <code>git</code> workflows and how
+to collaborate with others. Understant the value of cheap branching and
 simultaneous work with multiple teammates.
 </p>
 
@@ -340,7 +356,7 @@ There are numerous web based resources.  Reach out to me and I'll point you to s
 
 </section>
 <section id="slide-orgheadline18" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline18">Learn automation tools</h3>
+<h3 id="orgheadline18">Learn Automation Tools</h3>
 
 <div class="figure">
 <p><img src="https://imgs.xkcd.com/comics/the_general_problem.png" alt="the_general_problem.png" /> 
@@ -354,7 +370,7 @@ long game
 
 </section>
 <section id="slide-orgheadline19" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline19">Learn automation tools</h3>
+<h3 id="orgheadline19">Learn Automation Tools</h3>
 <ul>
 <li>Chef</li>
 <li>Puppet</li>
@@ -378,24 +394,31 @@ verbally mention powershell and python
 
 </section>
 <section id="slide-orgheadline20" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline20">Get out of your comfort zone</h3>
+<h3 id="orgheadline20">Get Out of Your Comfort Zone</h3>
 <p align="left">
 If you feel out of depth and this is hard, you're (probably) doing it right.
 Make the time investment
 </p>
 
+<div class="notes">
+<p>
+Just like a workout, need to push through a little discomfort to get results
+</p>
+
+</div>
+
 </section>
 </section>
 <section>
-<section id="slide-orgheadline27" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline27">What should an IT leader do?</h2>
+<section id="slide-orgheadline26" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline26">What should an IT Leader do?</h2>
 <p>
 What steps can an IT leader take to prepare for Cloud IT
 </p>
 
 </section>
 <section id="slide-orgheadline22" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline22">Talk to the business</h3>
+<h3 id="orgheadline22">Talk to the Business</h3>
 <p align="left">
 Get IT and business leaderstalking. Understand what they want out if it and how they
 use it. If they use cloud find out what for and why. 
@@ -437,45 +460,50 @@ worth taking.  Are you rewarding the status quo and minimal change via your poli
 
 </section>
 <section id="slide-orgheadline24" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline24">Find peers</h3>
+<h3 id="orgheadline24">Find Peers</h3>
 <p align="left">
 Get out into the community. Find peer customers. Find trusted advisors(like asg)
 to extend staff and introduce new modes of operating
 </p>
 
 </section>
-<section id="slide-orgheadline26" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline26">Find trusted advisors</h3>
+<section id="slide-orgheadline25" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline25">Find Trusted Advisors</h3>
 <p align="left">
 Talk to your technology partners. Ask them probing questions. What are they
 asking you?  How can they help you make start this journey
 </p>
 
-</section>
-<section id="slide-orgheadline25" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h4 id="orgheadline25">Themes to listen for:</h4>
+<p>
+:reveal<sub>background</sub>: ./asg<sub>slide</sub><sub>bg.png</sub>
+:reveal<sub>background</sub><sub>trans</sub>: slide
+</p>
+
+<p>
+Themes to listen for:
+</p>
 <ul>
-<li>faster</li>
-<li>automated</li>
-<li>simplified ops</li>
-<li>self provisioning</li>
-<li>visibility</li>
-<li>multi tenant</li>
+<li>Faster</li>
+<li>Automated</li>
+<li>Simplified ops</li>
+<li>Self provisioning</li>
+<li>Visibility</li>
+<li>Multi-tenant</li>
 
 </ul>
 
 </section>
 </section>
 <section>
-<section id="slide-orgheadline31" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline31">ASG can help</h2>
+<section id="slide-orgheadline30" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline30">ASG Can Help</h2>
 <p align="left">
 With our Application Mapping Service and Cloud Roadmap Service
 </p>
 
 </section>
-<section id="slide-orgheadline28" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline28"></h3>
+<section id="slide-orgheadline27" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline27"></h3>
 
 <div class="figure">
 <p><img src="./ASG-AppMap-slide1.png" alt="ASG-AppMap-slide1.png" />
@@ -483,8 +511,8 @@ With our Application Mapping Service and Cloud Roadmap Service
 </div>
 
 </section>
-<section id="slide-orgheadline29" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline29"></h3>
+<section id="slide-orgheadline28" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline28"></h3>
 
 <div class="figure">
 <p><img src="./ASG-AppMap-slide2.png" alt="ASG-AppMap-slide2.png" />
@@ -492,8 +520,8 @@ With our Application Mapping Service and Cloud Roadmap Service
 </div>
 
 </section>
-<section id="slide-orgheadline30" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline30"></h3>
+<section id="slide-orgheadline29" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline29"></h3>
 
 <div class="figure">
 <p><img src="./ASG-AppMap-slide3.png" alt="ASG-AppMap-slide3.png" />
@@ -503,8 +531,8 @@ With our Application Mapping Service and Cloud Roadmap Service
 </section>
 </section>
 <section>
-<section id="slide-orgheadline39" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline39">ASG and Tintri</h2>
+<section id="slide-orgheadline38" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline38">ASG and Tintri</h2>
 <p>
 ASG partners with Tintri. Tintri's VM-aware storage is an example of a product
 that provides many of the attributes to ready enterprise customers to being
@@ -516,40 +544,40 @@ How?
 </p>
 
 </section>
-<section id="slide-orgheadline32" data-background="./tintri_slide1.png" data-background-transition="slide">
+<section id="slide-orgheadline31" data-background="./tintri_slide1.png" data-background-transition="slide">
+<h3 id="orgheadline31"></h3>
+
+</section>
+<section id="slide-orgheadline32" data-background="./tintri_slide2.png" data-background-transition="slide">
 <h3 id="orgheadline32"></h3>
 
 </section>
-<section id="slide-orgheadline33" data-background="./tintri_slide2.png" data-background-transition="slide">
+<section id="slide-orgheadline33" data-background="./tintri_slide3.png" data-background-transition="slide">
 <h3 id="orgheadline33"></h3>
 
 </section>
-<section id="slide-orgheadline34" data-background="./tintri_slide3.png" data-background-transition="slide">
+<section id="slide-orgheadline34" data-background="./tintri_slide4.png" data-background-transition="slide">
 <h3 id="orgheadline34"></h3>
 
 </section>
-<section id="slide-orgheadline35" data-background="./tintri_slide4.png" data-background-transition="slide">
+<section id="slide-orgheadline35" data-background="./tintri_slide5.png" data-background-transition="slide">
 <h3 id="orgheadline35"></h3>
 
 </section>
-<section id="slide-orgheadline36" data-background="./tintri_slide5.png" data-background-transition="slide">
+<section id="slide-orgheadline36" data-background="./tintri_slide6.png" data-background-transition="slide">
 <h3 id="orgheadline36"></h3>
 
+
 </section>
-<section id="slide-orgheadline37" data-background="./tintri_slide6.png" data-background-transition="slide">
+<section id="slide-orgheadline37" data-background="./tintri_slide7.png" data-background-transition="slide">
 <h3 id="orgheadline37"></h3>
-
-
-</section>
-<section id="slide-orgheadline38" data-background="./tintri_slide7.png" data-background-transition="slide">
-<h3 id="orgheadline38"></h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgheadline40" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline40">Thank you</h2>
+<section id="slide-orgheadline39" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline39">Thank you</h2>
 <p>
 Questions?
 </p>
