minor mods. playing with spacemacs

--- a/cloudjourney_slides.html
+++ b/cloudjourney_slides.html
@@ -7,9 +7,9 @@
 <style type="text/css">
 .underline { text-decoration: underline; }
 </style>
-<link rel="stylesheet" href="./reveal.js/css/reveal.css"/>
+<link rel="stylesheet" href="/home/sharney/source/reveal.js/css/reveal.css"/>
 
-<link rel="stylesheet" href="./reveal.js/css/theme/blood.css" id="theme"/>
+<link rel="stylesheet" href="/home/sharney/source/reveal.js/css/theme/blood.css" id="theme"/>
 
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
@@ -18,7 +18,7 @@
         var link = document.createElement( 'link' );
         link.rel = 'stylesheet';
         link.type = 'text/css';
-        link.href = './reveal.js/css/print/pdf.css';
+        link.href = '/home/sharney/source/reveal.js/css/print/pdf.css';
         document.getElementsByTagName( 'head' )[0].appendChild( link );
     }
 </script>
@@ -48,6 +48,7 @@ Twitter: <a href="https://twitter.com/sharney">@sharney</a>
 Linkedin: <a href="https://www.linkedin.com/in/scottharney">https://www.linkedin.com/in/scottharney</a>
 </p>
 </div>
+
 
 </section>
 </section>
@@ -585,8 +586,8 @@ Questions?
 </section>
 </div>
 </div>
-<script src="./reveal.js/lib/js/head.min.js"></script>
-<script src="./reveal.js/js/reveal.js"></script>
+<script src="/home/sharney/source/reveal.js/lib/js/head.min.js"></script>
+<script src="/home/sharney/source/reveal.js/js/reveal.js"></script>
 
 <script>
 // Full list of configuration options available here:
@@ -614,11 +615,11 @@ multiplex: {
 
 // Optional libraries used to extend on reveal.js
 dependencies: [
- { src: './reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
- { src: './reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: './reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: './reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
- { src: './reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }]
+ { src: '/home/sharney/source/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+ { src: '/home/sharney/source/reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+ { src: '/home/sharney/source/reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+ { src: '/home/sharney/source/reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+ { src: '/home/sharney/source/reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }]
 });
 </script>
 </body>
