various editing updates

--- a/cloudjourney_slides.html
+++ b/cloudjourney_slides.html
@@ -411,8 +411,8 @@ Just like a workout, need to push through a little discomfort to get results
 </section>
 </section>
 <section>
-<section id="slide-orgheadline26" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline26">What should an IT Leader do?</h2>
+<section id="slide-orgheadline27" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline27">What should an IT Leader do?</h2>
 <p>
 What steps can an IT leader take to prepare for Cloud IT
 </p>
@@ -475,36 +475,31 @@ Talk to your technology partners. Ask them probing questions. What are they
 asking you?  How can they help you make start this journey
 </p>
 
-<p>
-:reveal<sub>background</sub>: ./asg<sub>slide</sub><sub>bg.png</sub>
-:reveal<sub>background</sub><sub>trans</sub>: slide
-</p>
-
-<p>
-Themes to listen for:
-</p>
+</section>
+<section id="slide-orgheadline26" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline26">Themes to listen for</h3>
 <ul>
-<li>Faster</li>
-<li>Automated</li>
-<li>Simplified ops</li>
-<li>Self provisioning</li>
-<li>Visibility</li>
-<li>Multi-tenant</li>
+<li class="fragment appear">Faster</li>
+<li class="fragment appear">Automated</li>
+<li class="fragment appear">Simplified ops</li>
+<li class="fragment appear">Self provisioning</li>
+<li class="fragment appear">Visibility</li>
+<li class="fragment appear">Multi-tenant</li>
 
 </ul>
 
 </section>
 </section>
 <section>
-<section id="slide-orgheadline30" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline30">ASG Can Help</h2>
+<section id="slide-orgheadline31" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline31">ASG Can Help</h2>
 <p align="left">
 With our Application Mapping Service and Cloud Roadmap Service
 </p>
 
 </section>
-<section id="slide-orgheadline27" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline27"></h3>
+<section id="slide-orgheadline28" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline28"></h3>
 
 <div class="figure">
 <p><img src="./ASG-AppMap-slide1.png" alt="ASG-AppMap-slide1.png" />
@@ -512,8 +507,8 @@ With our Application Mapping Service and Cloud Roadmap Service
 </div>
 
 </section>
-<section id="slide-orgheadline28" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline28"></h3>
+<section id="slide-orgheadline29" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline29"></h3>
 
 <div class="figure">
 <p><img src="./ASG-AppMap-slide2.png" alt="ASG-AppMap-slide2.png" />
@@ -521,8 +516,8 @@ With our Application Mapping Service and Cloud Roadmap Service
 </div>
 
 </section>
-<section id="slide-orgheadline29" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline29"></h3>
+<section id="slide-orgheadline30" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h3 id="orgheadline30"></h3>
 
 <div class="figure">
 <p><img src="./ASG-AppMap-slide3.png" alt="ASG-AppMap-slide3.png" />
@@ -532,8 +527,8 @@ With our Application Mapping Service and Cloud Roadmap Service
 </section>
 </section>
 <section>
-<section id="slide-orgheadline38" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline38">ASG and Tintri</h2>
+<section id="slide-orgheadline39" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline39">ASG and Tintri</h2>
 <p>
 ASG partners with Tintri. Tintri's VM-aware storage is an example of a product
 that provides many of the attributes to ready enterprise customers to being
@@ -545,40 +540,40 @@ How?
 </p>
 
 </section>
-<section id="slide-orgheadline31" data-background="./tintri_slide1.png" data-background-transition="slide">
-<h3 id="orgheadline31"></h3>
-
-</section>
-<section id="slide-orgheadline32" data-background="./tintri_slide2.png" data-background-transition="slide">
+<section id="slide-orgheadline32" data-background="./tintri_slide1.png" data-background-transition="slide">
 <h3 id="orgheadline32"></h3>
 
 </section>
-<section id="slide-orgheadline33" data-background="./tintri_slide3.png" data-background-transition="slide">
+<section id="slide-orgheadline33" data-background="./tintri_slide2.png" data-background-transition="slide">
 <h3 id="orgheadline33"></h3>
 
 </section>
-<section id="slide-orgheadline34" data-background="./tintri_slide4.png" data-background-transition="slide">
+<section id="slide-orgheadline34" data-background="./tintri_slide3.png" data-background-transition="slide">
 <h3 id="orgheadline34"></h3>
 
 </section>
-<section id="slide-orgheadline35" data-background="./tintri_slide5.png" data-background-transition="slide">
+<section id="slide-orgheadline35" data-background="./tintri_slide4.png" data-background-transition="slide">
 <h3 id="orgheadline35"></h3>
 
 </section>
-<section id="slide-orgheadline36" data-background="./tintri_slide6.png" data-background-transition="slide">
+<section id="slide-orgheadline36" data-background="./tintri_slide5.png" data-background-transition="slide">
 <h3 id="orgheadline36"></h3>
+
+</section>
+<section id="slide-orgheadline37" data-background="./tintri_slide6.png" data-background-transition="slide">
+<h3 id="orgheadline37"></h3>
 
 
 </section>
-<section id="slide-orgheadline37" data-background="./tintri_slide7.png" data-background-transition="slide">
-<h3 id="orgheadline37"></h3>
+<section id="slide-orgheadline38" data-background="./tintri_slide7.png" data-background-transition="slide">
+<h3 id="orgheadline38"></h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgheadline39" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline39">Thank you</h2>
+<section id="slide-orgheadline40" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline40">Thank you</h2>
 <p>
 Questions?
 </p>
