minor cleanups. new pdf generated via chrome
use ?print-pdf at tail of file and print dialog to produce pdf

--- a/cloudjourney_slides.html
+++ b/cloudjourney_slides.html
@@ -344,10 +344,10 @@ attention on Linux skills.
 
 </section>
 <section id="slide-orgheadline17" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h3 id="orgheadline17">Learn <code>git</code></h3>
+<h3 id="orgheadline17">Learn git</h3>
 <p align="left">
-essential skills today for the practitioner. Learn how <code>git</code> workflows and how
-to collaborate with others. Understant the value of cheap branching and
+Essential skills today for the practitioner. Learn git workflows and how
+to collaborate with others. Understand the value of cheap branching and
 simultaneous work with multiple teammates.
 </p>
 
