--- a/cloudjourney_slides.html
+++ b/cloudjourney_slides.html
@@ -273,6 +273,13 @@ Corollary 6a
 
 </ul>
 
+<aside class="notes">
+<p>
+eg eventually consistent distributed db == DNS
+</p>
+
+</aside>
+
 <p class="fragment (appear)">
 <a href="https://tools.ietf.org/html/rfc1925" class="fragment (appear)">https://tools.ietf.org/html/rfc1925</a> (published 4/1/1996)
 </p>
