--- a/cloudjourney_slides.html
+++ b/cloudjourney_slides.html
@@ -99,7 +99,7 @@ public private or hybrid cloud model? Open stack anyone?
 <h3 id="orgheadline4">Who is ASG?</h3>
 <ul>
 <li>Leading National systems integrator since 1981</li>
-<li>Headquarters in Denver, CO. has maintained a prescence in LA throughout
+<li>Headquarters in Denver, CO. has maintained a presence in LA throughout
 company history</li>
 <li>Provides Consulting services supporting the business of IT</li>
 
@@ -327,7 +327,7 @@ of usage. Start with the basic infrastructure elements.
 </p>
 
 <p align="left">
-When you get your first bill, start to look at how items are charge and begin to
+When you get your first bill, start to look at how items are charged and begin to
 understand <i>why</i> some things are charged more than others.
 </p>
 
@@ -345,7 +345,7 @@ fashion.  depends on use case and needs
 <section id="slide-orgheadline16" data-background="./asg_slide_bg.png" data-background-transition="slide">
 <h3 id="orgheadline16">Learn Linux</h3>
 <p align="left">
-Cloud native and Linux go hand in hand.  it's time now to start focusing your
+Cloud native and Linux go hand in hand.  It's time now to start focusing your
 attention on Linux skills.  
 </p>
 
@@ -353,7 +353,7 @@ attention on Linux skills.
 <section id="slide-orgheadline17" data-background="./asg_slide_bg.png" data-background-transition="slide">
 <h3 id="orgheadline17">Learn git</h3>
 <p align="left">
-Essential skills today for the practitioner. Learn git workflows and how
+Essential skill today for the practitioner. Learn git workflows and how
 to collaborate with others. Understand the value of cheap branching and
 simultaneous work with multiple teammates.
 </p>
@@ -408,12 +408,12 @@ If you feel out of depth and this is hard, you're (probably) doing it right.
 Make the time investment
 </p>
 
-<div class="notes">
+<aside class="notes">
 <p>
 Just like a workout, need to push through a little discomfort to get results
 </p>
 
-</div>
+</aside>
 
 </section>
 </section>
@@ -428,8 +428,8 @@ What steps can an IT leader take to prepare for Cloud IT
 <section id="slide-orgheadline22" data-background="./asg_slide_bg.png" data-background-transition="slide">
 <h3 id="orgheadline22">Talk to the Business</h3>
 <p align="left">
-Get IT and business leader stalking. Understand what they want out if it and how they
-use it. If they use cloud find out what for and why. 
+Get IT and business leaders talking. Understand what they want out if IT and how they
+use IT. If they use cloud find out what for and why. 
 </p>
 
 <p align="left">
@@ -470,8 +470,8 @@ worth taking.  Are you rewarding the status quo and minimal change via your poli
 <section id="slide-orgheadline24" data-background="./asg_slide_bg.png" data-background-transition="slide">
 <h3 id="orgheadline24">Find Peers</h3>
 <p align="left">
-Get out into the community. Find peer customers. Find trusted advisors(like asg)
-to extend staff and introduce new modes of operating
+Get out into the community. Find peer customers. Find out if they are embracing
+new modes of operating and how their experience is going.
 </p>
 
 </section>
@@ -479,7 +479,7 @@ to extend staff and introduce new modes of operating
 <h3 id="orgheadline25">Find Trusted Advisors</h3>
 <p align="left">
 Talk to your technology partners. Ask them probing questions. What are they
-asking you?  How can they help you make start this journey
+asking you?  How can they help you start this journey
 </p>
 
 </section>
@@ -501,7 +501,7 @@ asking you?  How can they help you make start this journey
 <section id="slide-orgheadline31" data-background="./asg_slide_bg.png" data-background-transition="slide">
 <h2 id="orgheadline31">ASG Can Help</h2>
 <p align="left">
-With our Application Mapping Service and Cloud Roadmap Service
+Examples include our Application Mapping Service and Cloud Roadmap Service
 </p>
 
 </section>
@@ -534,8 +534,8 @@ With our Application Mapping Service and Cloud Roadmap Service
 </section>
 </section>
 <section>
-<section id="slide-orgheadline39" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline39">ASG and Tintri</h2>
+<section id="slide-orgheadline32" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline32">ASG and Tintri</h2>
 <p>
 ASG partners with Tintri. Tintri's VM-aware storage is an example of a product
 that provides many of the attributes to ready enterprise customers to being
@@ -546,41 +546,12 @@ moving to cloud-like IT.
 How?
 </p>
 
-</section>
-<section id="slide-orgheadline32" data-background="./tintri_slide1.png" data-background-transition="slide">
-<h3 id="orgheadline32"></h3>
-
-</section>
-<section id="slide-orgheadline33" data-background="./tintri_slide2.png" data-background-transition="slide">
-<h3 id="orgheadline33"></h3>
-
-</section>
-<section id="slide-orgheadline34" data-background="./tintri_slide3.png" data-background-transition="slide">
-<h3 id="orgheadline34"></h3>
-
-</section>
-<section id="slide-orgheadline35" data-background="./tintri_slide4.png" data-background-transition="slide">
-<h3 id="orgheadline35"></h3>
-
-</section>
-<section id="slide-orgheadline36" data-background="./tintri_slide5.png" data-background-transition="slide">
-<h3 id="orgheadline36"></h3>
-
-</section>
-<section id="slide-orgheadline37" data-background="./tintri_slide6.png" data-background-transition="slide">
-<h3 id="orgheadline37"></h3>
-
-
-</section>
-<section id="slide-orgheadline38" data-background="./tintri_slide7.png" data-background-transition="slide">
-<h3 id="orgheadline38"></h3>
-
 
 </section>
 </section>
 <section>
-<section id="slide-orgheadline40" data-background="./asg_slide_bg.png" data-background-transition="slide">
-<h2 id="orgheadline40">Thank you</h2>
+<section id="slide-orgheadline33" data-background="./asg_slide_bg.png" data-background-transition="slide">
+<h2 id="orgheadline33">Thank you</h2>
 <p>
 Questions?
 </p>
