added links to final page

--- a/cloudjourney_slides.html
+++ b/cloudjourney_slides.html
@@ -555,6 +555,14 @@ How?
 <p>
 Questions?
 </p>
+
+<ul>
+<li><a href="https://www.virtual.com/">https://www.virtual.com/</a></li>
+<li><a href="https://www.tintri.com/">https://www.tintri.com/</a></li>
+<li>presentation: <a href="https://github.com/scottharney/cloudjourney">https://github.com/scottharney/cloudjourney</a></li>
+<li>personal website <a href="https://www.scottharney.com/">https://www.scottharney.com/</a></li>
+
+</ul>
 </section>
 </section>
 </div>
