--- a/cloudjourney_slides.html
+++ b/cloudjourney_slides.html
@@ -69,7 +69,7 @@ public private or hybrid cloud model? Open stack anyone?
 <h3 id="orgheadline2">Who am I?</h3>
 
 <div class="figure">
-<p><img src="https://cdn-images-1.medium.com/max/600/1*snTXFElFuQLSFDnvZKJ6IA.png" alt="1*snTXFElFuQLSFDnvZKJ6IA.png" />
+<p><img src="./1-snTXFElFuQLSFDnvZKJ6IA.png" alt="1-snTXFElFuQLSFDnvZKJ6IA.png" />
 </p>
 </div>
 
@@ -367,7 +367,7 @@ There are numerous web based resources.  Reach out to me and I'll point you to s
 <h3 id="orgheadline18">Learn Automation Tools</h3>
 
 <div class="figure">
-<p><img src="https://imgs.xkcd.com/comics/the_general_problem.png" alt="the_general_problem.png" /> 
+<p><img src="./the_general_problem.png" alt="the_general_problem.png" /> 
 </p>
 </div>
 
